# nxcloud

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PKGBUILD  README.md  snapcraft.yaml
ci/: run_mock.py
src/: file.rs  http.rs  keyring.rs  main.rs  util.rs
src/types/: credentials.rs  mod.rs  remote_path.rs
