[package]
name = "nxcloud"
version = "0.2.1"
authors = ["Ethan Budd <budde25@protonmail.com>"]
description = "A client for interacting with your NextCloud server"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["NextCloud", "CLI", "utilities"]
categories = ["command-line-utilities"]
homepage = "https://github.com/budde25/nextcloud-client-cli"
repository = "https://github.com/budde25/nextcloud-client-cli"

[features]

default = ["secure-password"]

# allows use of the keyring package to store passwords in the users keyring
secure-password = ["keyring"]

[dependencies]
url = "2.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.1", features = ["full"] }
xmltree = "0.10"
base64 = "0.13"
keyring = { version = "1.0", optional = true }
path-dedot = "3.0"
path-absolutize = "3.0"
anyhow = "1.0"
env_logger = "0.9"
clap = { version = "3.0", features = ["derive"] }
log = "0.4"
rustyline = "9.1"
dirs-next = "2.0"
cfg-if = "1.0"
once_cell = "1.7"